# TaskManagerC-

./: CMakeLists.txt  README.md  database.txt  main.cpp
storage/: CMakeLists.txt  storage.cpp  storage.h
task/: CMakeLists.txt  task.cpp  task.h
taskManager/: CMakeLists.txt  taskManager.cpp  taskManager.h
